--- a/manifest.json
+++ b/manifest.json
@@ -9,15 +9,20 @@
     "description": "Aplicacion sobre left 4 dead",
     "orientation": "portrait-primary",
     "icons": [
-        {
-            "src": "img/icon_logo.png",
-            "type": "image/png",
-            "sizes": "32x32"
-        },
-        {
-            "src": "img/icon_logo.png",
-            "type": "image/png",
-            "sizes": "250x250"
-        }
-    ]
+    {
+        "src": "img/icon_logo.webp",
+        "type": "image/png",
+        "sizes": "32x32"
+    },
+    {
+        "src": "img/icon_logo.webp",
+        "type": "image/png",
+        "sizes": "192x192"
+    },
+    {
+        "src": "img/icon_logo.webp",
+        "type": "image/png",
+        "sizes": "512x512"
+    }
+]
 }
