--- a/manifest.json
+++ b/manifest.json
@@ -10,17 +10,17 @@
     "orientation": "portrait-primary",
     "icons": [
     {
-        "src": "img/icon_logo.webp",
+        "src": "img/logo.png",
         "type": "image/png",
         "sizes": "32x32"
     },
     {
-        "src": "img/icon_logo.webp",
+        "src": "img/logo.png",
         "type": "image/png",
         "sizes": "192x192"
     },
     {
-        "src": "img/icon_logo.webp",
+        "src": "img/logo.png",
         "type": "image/png",
         "sizes": "512x512"
     }
